restructured assets folder

--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ author:
   name: 'T0ny Lombardi'
   email: me@t0nylombardi.com
   twitter_username: t0nylombardi
-  facebook_username: t0nylombardi
+  facebook_username: 
   github_username:  t0nylombardi
-  linkedin_username:  t0nylombardi
+  linkedin_username:  anthonyjlombardi
 
 defaults:
   -
