--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "engines": {
     "node": ">=12",
     "yarn": ">=1.15"
+  },
+  "dependencies": {
+    "g": "^2.0.1",
+    "yarn": "^1.22.5"
   }
 }
