--- a/redwood.toml
+++ b/redwood.toml
@@ -10,5 +10,9 @@
   apiProxyPath = "/.redwood/functions"
 [api]
   port = 8911
+  [api.paths]
+  functions = './api/src/functions'
+  graphql = './api/src/graphql'
+  generated = './api/generated'
 [browser]
   open = true
