--- a/package.json
+++ b/package.json
@@ -13,20 +13,28 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/classnames": "^2.2.10",
     "@types/jest": "^24.0.0",
+    "@types/marked": "^1.1.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
+    "axios": "^0.21.0",
     "chokidar-cli": "^2.1.0",
     "classnames": "^2.2.6",
+    "marked": "^1.2.2",
     "npm-run-all": "^4.1.5",
     "npm-watch": "^0.7.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-markdown": "^5.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-syntax-highlighter": "^15.3.0",
+    "remark-code-frontmatter": "^1.0.0",
+    "remark-html": "^13.0.1",
     "tailwindcss": "^1.9.5",
     "typescript": "~3.7.2",
     "watch": "^1.0.2"
@@ -59,6 +67,8 @@
     ]
   },
   "devDependencies": {
+    "faker": "^5.1.0",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.6",
     "postcss": "^8.1.4",
     "postcss-cli": "^8.1.0"
