--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chokidar-cli": "^2.1.0",
     "classnames": "^2.2.6",
     "marked": "^1.2.2",
+    "node-sass": "4.14.1",
     "npm-run-all": "^4.1.5",
     "npm-watch": "^0.7.0",
     "react": "^16.14.0",
@@ -35,6 +36,7 @@
     "react-syntax-highlighter": "^15.3.0",
     "remark-code-frontmatter": "^1.0.0",
     "remark-html": "^13.0.1",
+    "sass": "^1.29.0",
     "tailwindcss": "^1.9.5",
     "typescript": "~3.7.2",
     "watch": "^1.0.2"
