--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "npm-run-all": "^4.1.5",
     "npm-watch": "^0.7.0",
     "react": "^16.14.0",
+    "react-content-loader": "^5.1.4",
     "react-dom": "^16.14.0",
     "react-markdown": "^5.0.2",
     "react-router-dom": "^5.2.0",
