--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.21.0",
     "chokidar-cli": "^2.1.0",
     "classnames": "^2.2.6",
+    "disqus-react": "^1.0.10",
     "marked": "^1.2.2",
     "node-sass": "4.14.1",
     "npm-run-all": "^4.1.5",
@@ -39,6 +40,7 @@
     "remark-html": "^13.0.1",
     "sass": "^1.29.0",
     "tailwindcss": "^1.9.5",
+    "twin.macro": "^2.0.5",
     "typescript": "~3.7.2",
     "watch": "^1.0.2"
   },
