--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
     "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@types/react-syntax-highlighter": "^13.5.0",
+    "axios": "^0.21.1",
+    "moment": "^2.29.1",
     "next": "^10.0.3",
     "postcss": "^7",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-content-loader": "^5.1.4",
+    "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3",
+    "react-syntax-highlighter": "^15.4.3"
   },
   "scripts": {
     "dev": "next dev",
