--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@types/react-syntax-highlighter": "^13.5.0",
     "axios": "^0.21.1",
+    "disqus-react": "^1.0.10",
+    "gray-matter": "^4.0.2",
+    "highlight.js": "^10.5.0",
     "moment": "^2.29.1",
     "next": "^10.0.3",
     "postcss": "^7",
@@ -20,7 +23,10 @@
     "react-content-loader": "^5.1.4",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
-    "react-syntax-highlighter": "^15.4.3"
+    "react-syntax-highlighter": "^15.4.3",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
+    "sass": "^1.30.0"
   },
   "scripts": {
     "dev": "next dev",
