--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "highlight.js": "^10.5.0",
     "moment": "^2.29.1",
     "next": "^10.0.3",
+    "next-absolute-url": "^1.2.2",
     "postcss": "^7",
     "react": "^17.0.1",
     "react-content-loader": "^5.1.4",
