--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "postcss": "^7",
     "react": "^17.0.1",
     "react-content-loader": "^5.1.4",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
+    "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^15.4.3",
+    "react-visibility-sensor": "^5.1.1",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "sass": "^1.30.0"
